organisation cours JS

--- a/front/scss/components/_variables.scss
+++ b/front/scss/components/_variables.scss
@@ -4,3 +4,5 @@ $primary-fonts: "outfit", sans-serif;
 //colors
 $color-dark-blue: hsl(217, 54%, 11%);
 $color--cyan: hsl(178, 100%, 50%);
+
+//images
